--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- Crisp cdn start -->
+    <script type="text/javascript">
+      window.$crisp = [];
+      window.CRISP_WEBSITE_ID = "a3208190-4b75-4318-a5f2-bebafb099e65";
+      (function () {
+        d = document;
+        s = d.createElement("script");
+        s.src = "https://client.crisp.chat/l.js";
+        s.async = 1;
+        d.getElementsByTagName("head")[0].appendChild(s);
+      })();
+    </script>
+
+    <!-- Crisp cdn end -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
