3 bar to cross and crisp

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="root"></div>
 
     <!-- Crisp cdn start -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       window.$crisp = [];
       window.CRISP_WEBSITE_ID = "a3208190-4b75-4318-a5f2-bebafb099e65";
       (function () {
@@ -20,7 +20,9 @@
         s.async = 1;
         d.getElementsByTagName("head")[0].appendChild(s);
       })();
-    </script>
+    </script> -->
+
+    <script src="/src/assets/JSFile/CrispChat.js"></script>
 
     <!-- Crisp cdn end -->
     <script type="module" src="/src/main.jsx"></script>
