Added emailjs in contact

--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
     </script> -->
 
     <!-- Crisp cdn end -->
+
+    <!-- Email js script start -->
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+    ></script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init({
+          publicKey: "_kzTXrFfQk2uFNUe9",
+        });
+      })();
+    </script>
+    <!-- Email js script end-->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
