Update after windows

--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <link rel="icon" type="image/svg+xml" href="/Suvrodeb.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Structure by React</title>
+
+    <!-- For Link Preview start -->
+    <!-- <meta property="og:title" content="Structure-React-" />
+    <meta property="og:description" content="Suvrodeb's Link Preview" />
+    <meta
+      property="og:image"
+      content="https://i.ibb.co.com/pbRMTMZ/Web-Development.jpg"
+    />
+    <meta
+      property="og:url"
+      content="https://heroic-crepe-2ae4c9.netlify.app/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" /> -->
+    <!-- For Link Preview end -->
   </head>
   <body>
     <div id="root"></div>
